src/routes/_layout/nav-styles.scss
#site-navigation {
  writing-mode: vertical-rl;
  background: var(--bg-color);
  z-index: 9;

  position: fixed;
  width: var(--nav-height);
  height: 100vh;
  top: 0;
  right: 0;
  font-family: var(--header-font);

  a,
  a:visited {
    color: var(--body-color);
    margin: 50px 30px;
    text-decoration: none;
  }

  ul {
    list-style-type: none;
    display: flex;
    align-items: center;
    font-size: 30px;
    font-weight: bold;
  }

  #jump-to-sections > .heading {
    font-weight: normal;
    font-size: 24px;
  }

  #dashed-line-container {
    position: relative;
    top: -50px;
    height: calc(100% + 50px);
    width: 4px;
    display: flex;
    align-items: center;
    overflow: hidden;
    animation: move-slow 1s linear infinite;

    div {
      width: 20px;
      height: 100%;
      background: linear-gradient(
        var(--body-color-2) 0,
        var(--body-color-2) 50%,
        transparent 50%,
        transparent 100%
      );
      background-size: 20px 50px;
    }

    &.move > div {
      animation: move-fast var(--nav-anim-duration)
        cubic-bezier(0.38, 0.02, 0, 1);
    }
  }

  #primary-nav {
    li {
      opacity: 0.5;
    }
    li.active {
      opacity: 1;
    }
  }

  @media (min-width: 850px) {
    .mobile {
      display: none;
    }
  }

  @media (max-width: 850px) {
    writing-mode: initial;
    left: 0;
    width: 100vw;
    height: var(--nav-height);
    display: flex;
    align-items: center;
    border-bottom: 2px solid var(--bg-color-2);

    #dashed-line-container {
      display: none;
    }

    #jump-to-section-toggle {
      font-size: 24px;
      transition: background-position-y 0.3s;
      background: linear-gradient(
        var(--green) 33.33%,
        var(--red) 33.33%,
        var(--red) 66.67%,
        var(--purple) 66.67%
      );
      background-size: 100% 300%;
      margin-right: 20px;

      height: 100%;
      padding: 0;
      padding-left: 20px;
      padding-right: 15px;
      color: var(--bg-color);
      font-weight: bold;

      svg {
        margin-left: 5px;
        width: 30px;
        vertical-align: middle;
        fill: var(--bg-color);
      }
    }

    #primary-nav-toggle {
      height: 24px;
      width: 30px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: stretch;
      padding: 0;
      margin-left: auto;
      margin-right: 30px;

      * {
        border-bottom: 4px solid var(--body-color);
        transition: transform 0.2s, opacity 0.2s;
      }

      .stripe-top {
        transform-origin: top right;
      }

      .stripe-bottom {
        transform-origin: bottom right;
      }
    }

    ul {
      position: fixed;
      top: 0;
      left: 0;
      right: 0;
      height: 0; /* hide until mobile nav toggled */
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: stretch;
      overflow: hidden;
      background: var(--bg-color);
      transition: height 0.3s, opacity 0.4s;
      z-index: -1;
      font-size: 36px;

      li {
        margin: 30px;
        margin-left: 0;
      }

      a {
        display: block;
        margin: 0;
      }
    }

    #primary-nav {
      a {
        text-align: end;
      }
    }

    #primary-nav.toggled {
      height: 100vh;

      ~ #primary-nav-toggle {
        .stripe-top {
          transform: rotate(-45deg);
        }
        .stripe-bottom {
          transform: rotate(45deg);
        }
        .stripe-middle {
          transform: scaleX(0);
        }
      }
    }

    #jump-to-sections.toggled {
      height: 100vh;
    }
  }
}

@keyframes move-slow {
  from {
    transform: translateY(50px);
  }
}

@keyframes move-fast {
  0% {
    background-position-y: 1000px;
  }
  50% {
    filter: blur(8px);
  }
  100% {
    background-position-y: 0;
  }
}

